# opentrade

./: .dockerignore  Cargo.toml  Dockerfile  README.docker.md  docker-compose.override.yml  docker-compose.yml  plan.md
.sqlx/: query-4921070f295df7f2e151b34445de080e16b4a28aad7de3f4fe9cb653df31d86a.json  query-d9fd36475063a334cb54b609e3f88676ff48330b3707d01d06398d00872d0e7e.json  query-e4310dcfda202cd4715b3e748de7398ffee0f4fba2cea8aa079d9e69a18688b8.json
docker/: .env  init-timescaledb.sql
grafana/dashboards/: trading-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: timescaledb.yml
migrations/: 20250625125333_opentrade.sql  20250629033931_opentrade.sql
opentrade-core/: Cargo.toml
opentrade-core/src/: lib.rs  models.rs
opentrade-core/src/data_source/: mod.rs  rest.rs  websocket.rs
opentrade-core/src/ingest/: mod.rs
opentrade-core/src/ingest/backfill/: klines.rs  mod.rs
opentrade-pipeline/: Cargo.toml
opentrade-pipeline/src/: main.rs
src/: main.rs  models.rs
src/api/: mod.rs
