[package]
name = "opentrade"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
binance_spot_connector_rust = { version = "1.3.0", features = ["enable-tokio-tungstenite", "full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "chrono", ] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
