[package]
name = "opentrade-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
binance_spot_connector_rust = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }